	* info/t/last-node-not-top-level.sh: New test.
	* info/t/infodir/last-node-not-top-level.info: New file.

	* info/session.c (select_menu_digit): Don't print any error messages.
	(info_menu_digit): Display error message if there is no menu in
	the node.

	* doc/info-stnd.texi (Variables) <cursor-movement-scrolls>
	<scroll-behaviour>: cursor-movement-scrolls=On by default.

2014-09-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_set_node_of_window): Don't get or remove
	footnotes nodes for footnotes nodes.
	* info/t/split-footnotes.sh: New test.

	* info/indices.c (info_indices_of_file_buffer): Only record first
	index found in initial_index_nodename.  This stops a memory leak
	when there are multiple indices, and means that "i<RET>" goes to
	the first index node in the file.

2014-09-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (free_history_node): Free 'nodename' field for
	internal nodes.
	(info_split_window): Copy 'nodename' field for new internal nodes.

	* info/echo-area.c (ea_possible_completions),
	* info/footnotes.c (make_footnotes_node),
	* info/indices.c (info_index_apropos),
	* info/nodemenu.c (list_visited_nodes): Duplicate 'nodename' field
	of new node.

	* info/footnotes.c (FOOTNOTE_HEADER_FORMAT): Removed.
	(make_footnotes_node): Don't call name_internal_node.

	* info/indices.c (info_index_apropos),
	* info/infodoc.c (create_internal_info_help_node): Don't clear
	N_IsInternal flag on new node.

	* info/info-utils.c (info_copy_references): Check if argument is null.

2014-09-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (create_virtindex_file_buffer): Deleted.
	(create_virtindex_node): Merged into caller in info_virtual_index.
	(info_virtual_index): Don't create a FILE_BUFFER to hold generated
	node.  Remove word "Info" from heading in node.
	(index_index): Comment changed.

	* info/info-utils.c (printed_representation): Return byte length 0 for